major error fixes